--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <script src="assets/main.js" defer ></script>
+    <a href="https://github.com/Voldemarrrs/sm6.git">Жмяк</a>
     <div class="container">
         <div class="news-list">
 
